# hobot_llm

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
config/hobot-dtb/: hobot-x3-cm.dtb  hobot-x3-pi.dtb  hobot-x3-pi_v2_1.dtb
include/: hobot_llm.h
include/model/: bpu_bloom_model.h
include/tokenizer/: tokenization_bloom.h
launch/: hobot_bloom.launch.py
src/: hobot_llm.cpp  hobot_llm_chat.cpp  main.cpp
src/model/: bpu_bloom_model.cpp
src/tokenizer/: tokenization_bloom.cpp
src/tokenizer/tokenization_bloom_py/: tokenization_bloom.py
src/tokenizer/tokenization_bloom_py/bloom_1b4_zh/: tokenizer.json
